--- a/programs.html
+++ b/programs.html
@@ -114,7 +114,7 @@
                 <li class="nav-item"><a class="nav-link" href="index.html#news" data-param-id="74" data-param-type="text">Новости</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" data-param-id="72" data-param-type="text">Программы</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-param-id="71" data-param-type="text">Галлерея</a></li>  
-                <li class="nav-item"><a class="nav-link" href="index.html#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
               </ul>
             
               <!-- /offcanvas-nav-other -->
@@ -160,7 +160,7 @@
                 </p>
                 <div class="d-flex">
                     <a href="index.html#gallery" class="btn btn-primary me-2">Галерея</a>
-                    <a href="index.html#contact" class="btn btn-success">Записаться</a>
+                    <a href="#contact" class="btn btn-success">Записаться</a>
                 </div>
             </div>
         </div>
@@ -344,7 +344,7 @@
                 <li class="nav-item"><a class="nav-link" href="index.html#news" data-param-id="74" data-param-type="text">Новости</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" data-param-id="72" data-param-type="text">Программы</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-param-id="71" data-param-type="text">Галлерея</a></li>  
-                <li class="nav-item"><a class="nav-link" href="index.html#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
                     </ul>
                 </div>
                 <!-- /.widget -->
