Сохранил локальные файлы перед обновлениемгалерея

--- a/gallery.html
+++ b/gallery.html
@@ -144,46 +144,86 @@
 			
    
    <main class="container mt-5">
-    <h1 class="text-center mb-4">ПРОГРАММЫ</h1>
+    <h1 class="text-center mb-4">ГАЛЕРЕЯ</h1>
 
-    <!-- Раздел "Секция бокса" -->
-    <section class="card shadow p-4 mb-4">
-        <div class="row align-items-center">
-            <div class="col-md-4">
-                <img src="coach.jpg" alt="Тренер по боксу" class="img-fluid rounded">
-            </div>
-            <div class="col-md-8">
-                <h2>Секция бокса</h2>
-                <p>
-                    Наш клуб предлагает профессиональную секцию бокса для всех возрастов. Тренировки ведёт опытный наставник,
-                    кандидат в мастера спорта СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
-                </p>
-                <div class="d-flex">
-                    <a href="index.html#gallery" class="btn btn-primary me-2">Галерея</a>
-                    <a href="#contact" class="btn btn-success">Записаться</a>
+    <div class="gallery-container">
+        <!-- Раздел 1: Фотографии секции бокса -->
+        <div class="gallery-section">
+            <h2>Фотографии секции бокса</h2>
+            <div class="gallery-items">
+                <div class="gallery-item">
+                    <img src="photo1.jpg" alt="Фото 1">
                 </div>
+                <div class="gallery-item">
+                    <img src="photo2.jpg" alt="Фото 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="photo3.jpg" alt="Фото 3">
+                </div>
+                <!-- Добавьте другие фотографии по необходимости -->
             </div>
         </div>
-    </section>
-    <!-- Добавим другие программы (пример) -->
-    <section class="card shadow p-4 mb-4">
-            <h2>Ориентирование и тактическая подготовка</h2>
-            <p>Обучение навыкам ориентирования на местности, тактическому мышлению, организации взаимодействия в экстремальных условиях.</p>
-        </section>
-        <section class="card shadow p-4 mb-4">
-            <h2>Первая медицинская помощь</h2>
-            <p>Обучение навыкам оказания первой помощи, реанимации, транспортировки раненых в сложных условиях.</p>
-        </section>
-        <section class="card shadow p-4 mb-4">
-            <h2>Выживание в полевых условиях</h2>
-            <p>Практические занятия по выживанию в лесу, пустыне, горах. Разведение огня, добыча воды, строительство укрытия.</p>
-        </section>
-        <section class="card shadow p-4 mb-4">
-            <h2>Тактические игры</h2>
-            <p>Участие в сценарных играх, моделирование боевых действий, обучение командной работе и тактике.</p>
-        </section>
-    </main>
-</div>
+
+        <!-- Раздел 2: Видео секции бокса -->
+        <div class="gallery-section">
+            <h2>Видео секции бокса</h2>
+            <div class="gallery-items">
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video1.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video2.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video3.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <!-- Добавьте другие видео по необходимости -->
+            </div>
+        </div>
+
+        <!-- Раздел 3: Все фотографии -->
+        <div class="gallery-section">
+            <h2>Все фотографии</h2>
+            <div class="gallery-items">
+                <div class="gallery-item">
+                    <img src="photo1.jpg" alt="Фото 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="photo2.jpg" alt="Фото 2">
+                </div>
+                <!-- Добавьте другие фотографии -->
+            </div>
+        </div>
+
+        <!-- Раздел 4: Все видео -->
+        <div class="gallery-section">
+            <h2>Все видео</h2>
+            <div class="gallery-items">
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video1.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video2.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <!-- Добавьте другие видео -->
+            </div>
+        </div>
+    </div>
 
 		
 <!-- /section -->
