--- a/gallery.html
+++ b/gallery.html
@@ -195,10 +195,10 @@
             <h2>Все фотографии</h2>
             <div class="gallery-items">
                 <div class="gallery-item">
-                    <img src="photo1.jpg" alt="Фото 1">
+                    <img src="gallery1.jpg" alt="Фото 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo2.jpg" alt="Фото 2">
+                    <img src="gallery2.jpg" alt="Фото 2">
                 </div>
                 <!-- Добавьте другие фотографии -->
             </div>
