more foto and video

--- a/gallery.html
+++ b/gallery.html
@@ -152,13 +152,13 @@
             <h2>Фотографии секции бокса</h2>
             <div class="gallery-items">
                 <div class="gallery-item">
-                    <img src="photo1.jpg" alt="Фото 1">
+                    <img src="gallery1.jpg" alt="Фото 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo2.jpg" alt="Фото 2">
+                    <img src="gallery2.jpg" alt="Фото 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo3.jpg" alt="Фото 3">
+                    <img src="gallery3.jpg" alt="Фото 3">
                 </div>
                 <!-- Добавьте другие фотографии по необходимости -->
             </div>
