more foto and video, add btn gallery in index

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
     
   <section id="gallery" class="wrapper bg-light">
-    <div class="container py-14 py-md-16">
+    <div class="container py-14 py-md-16 text-center">
         <h2 class="text-center mb-5">Фотогалерея</h2>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
@@ -310,6 +310,9 @@
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
+        </div>
+        <div class="mt-5">
+            <a href="gallery.html" class="btn btn-primary">Перейти в галерею</a>
         </div>
     </div>
 </section>
