--- a/gallery.html
+++ b/gallery.html
@@ -152,13 +152,28 @@
             <h2>Фотографии секции бокса</h2>
             <div class="gallery-items">
                 <div class="gallery-item">
-                    <img src="gallery1.jpg" alt="Фото 1">
+                    <img src="gallery4.jpg" alt="Фото 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery2.jpg" alt="Фото 2">
+                    <img src="gallery7.jpg" alt="Фото 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery3.jpg" alt="Фото 3">
+                    <img src="gallery8.jpg" alt="Фото 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery9.jpg" alt="Фото 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery10.jpg" alt="Фото 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery11.jpg" alt="Фото 6">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery12.jpg" alt="Фото 7">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery13.jpg" alt="Фото 8">
                 </div>
                 <!-- Добавьте другие фотографии по необходимости -->
             </div>
@@ -168,6 +183,12 @@
         <div class="gallery-section">
             <h2>Видео секции бокса</h2>
             <div class="gallery-items">
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video0.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
                 <div class="gallery-item">
                     <video controls>
                         <source src="video1.mp4" type="video/mp4">
@@ -195,10 +216,28 @@
             <h2>Все фотографии</h2>
             <div class="gallery-items">
                 <div class="gallery-item">
-                    <img src="gallery1.jpg" alt="Фото 1">
+                    <img src="gallery4.jpg" alt="Фото 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery2.jpg" alt="Фото 2">
+                    <img src="gallery7.jpg" alt="Фото 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery8.jpg" alt="Фото 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery9.jpg" alt="Фото 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery10.jpg" alt="Фото 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery11.jpg" alt="Фото 6">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery12.jpg" alt="Фото 7">
+                </div>
+                <div class="gallery-item">
+                    <img src="gallery13.jpg" alt="Фото 8">
                 </div>
                 <!-- Добавьте другие фотографии -->
             </div>
