add video and photo

--- a/gallery.html
+++ b/gallery.html
@@ -249,6 +249,12 @@
             <div class="gallery-items">
                 <div class="gallery-item">
                     <video controls>
+                        <source src="video0.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
                         <source src="video1.mp4" type="video/mp4">
                         Ваш браузер не поддерживает видео.
                     </video>
@@ -256,6 +262,12 @@
                 <div class="gallery-item">
                     <video controls>
                         <source src="video2.mp4" type="video/mp4">
+                        Ваш браузер не поддерживает видео.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="video3.mp4" type="video/mp4">
                         Ваш браузер не поддерживает видео.
                     </video>
                 </div>
