add style for gallery in index

--- a/index.html
+++ b/index.html
@@ -317,6 +317,14 @@
     </div>
 </section>
 
+<style>
+  .gallery-img {
+      width: 100%;
+      height: 300px; /* Установите нужную высоту */
+      object-fit: cover; /* Обрезает фото, сохраняя пропорции */
+  }
+</style>
+
 <section id="news" class="wrapper bg-light">
     <div class="container py-14 py-md-16">
         <h2 class="text-center mb-5">Новости</h2>
