--- a/index.html
+++ b/index.html
@@ -319,11 +319,16 @@
 
 <style>
   .gallery-img {
-      width: 100%;
-      height: 300px; /* Установите нужную высоту */
-      object-fit: cover; /* Обрезает фото, сохраняя пропорции */
-  }
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    height: 300px; /* Установите нужную высоту */
+    object-fit: cover; /* Обрезает фото, сохраняя пропорции */
+    aspect-ratio: 16/9; /* Фиксирует пропорции */
+}
+  
 </style>
+
 
 <section id="news" class="wrapper bg-light">
     <div class="container py-14 py-md-16">
