add style for dark bigest emblem and !important

--- a/index.html
+++ b/index.html
@@ -160,11 +160,12 @@
       </section>
       <!-- /section -->
       <section class="wrapper bg-dark">
-        <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
-          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="цветспарашютом.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
+        <div class="container py-10 text-center">
+            <figure class="rounded emblem-container" data-cue="slideInDown" data-delay="900">
+                <img src="цветспарашютом.jpg" data-param-id="30" data-param-type="image" alt="Эмблема" class="emblem-img">
+            </figure>
         </div>
-        <!-- /.container -->
-      </section>
+    </section>
       <!-- /section -->
  
 
