--- a/index.html
+++ b/index.html
@@ -158,25 +158,51 @@
         </div>
         <!-- /.container -->
       </section>
-      <!-- /section -->
       <section class="wrapper bg-dark">
         <div class="container py-10 text-center">
-            <figure class="rounded emblem-container" data-cue="slideInDown" data-delay="900">
-                <img src="цветспарашютом.jpg" data-param-id="30" data-param-type="image" alt="Эмблема" class="emblem-img">
-            </figure>
+            <h2 class="text-white mb-5">Галерея анонсов</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card bg-light text-dark">
+                        <img src="announcement1.jpg" class="card-img-top" alt="Анонс 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Предстоящий турнир</h5>
+                            <p class="card-text">Не пропустите! Турнир по боксу среди юных спортсменов состоится 15 апреля.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card bg-light text-dark">
+                        <img src="announcement2.jpg" class="card-img-top" alt="Анонс 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Военно-патриотические сборы</h5>
+                            <p class="card-text">Запись открыта! Подготовка к сборам ВДВ пройдёт в июне.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card bg-light text-dark">
+                        <img src="announcement3.jpg" class="card-img-top" alt="Анонс 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Новые секции</h5>
+                            <p class="card-text">В нашем клубе открыты новые направления: тактические игры и самооборона.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-      <!-- /section -->
- 
-
-
-
-   
-   
-   
     
-   
-  
+    <style>
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
+    
       <!-- /section -->
       <section id="about"  class="wrapper bg-light wrapper-border">
         <div class="container pt-15 pt-md-17 pb-13 pb-md-15">
