--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </section>
       <section class="wrapper bg-dark">
         <div class="container py-10 text-center">
-            <h2 class="text-white mb-5">Галерея анонсов</h2>
+            <h2 class="text-white mb-5"></h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card bg-light text-dark">
