add another class for gallery

--- a/gallery.html
+++ b/gallery.html
@@ -182,6 +182,7 @@
         <!-- Раздел 2: Видео секции бокса -->
         <div class="gallery-section">
             <h2>Видео секции бокса</h2>
+            <div class="gallery-items">
                 <div class="gallery-item">
                     <video controls>
                         <source src="video1.mp4" type="video/mp4">
