add gallery announcement4

--- a/index.html
+++ b/index.html
@@ -192,6 +192,16 @@
                               </div>
                           </div>
                       </div>
+                      <div class="swiper-slide">
+                        <div class="card bg-light text-dark">
+                            <img src="announcement4.jpg" class="card-img-top" alt="Анонс 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Новые секции</h5>
+                                <p class="card-text">В нашем клубе открыты старые направления: практические игры и Гражданская оборона.</p>
+                                <a href="#" class="btn btn-primary">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
                   </div>
                   <div class="swiper-button-next"></div>
                   <div class="swiper-button-prev"></div>
@@ -624,7 +634,7 @@
         box.style.position = 'fixed';
         box.style.right = '20px';
         box.style.bottom = '50px';
-    });
+ });
 </script>
 <!-- Плавающее окно с контактами -->
 <div class="floating-contact-box">
