--- a/index.html
+++ b/index.html
@@ -164,40 +164,42 @@
                   <div class="swiper-wrapper">
                       <div class="swiper-slide">
                           <div class="card bg-light text-dark">
-                              <img src="announcement1.jpg" class="card-img-top" alt="Анонс 1">
+                              <img src="announcement4.2jpg" class="card-img-top" alt="Анонс 1">
                               <div class="card-body">
-                                  <h5 class="card-title">Предстоящий турнир</h5>
-                                  <p class="card-text">Турнир по боксу среди юных спортсменов состоится 15 апреля.</p>
+                                  <h5 class="card-title">Открытый ринг</h5>
+                                  <p class="card-text">Спарринги среди юных спортсменов пройдут 8 марта. Место проведение уточняется.</p>
                                   <a href="#" class="btn btn-primary">Подробнее</a>
                               </div>
                           </div>
                       </div>
                       <div class="swiper-slide">
                           <div class="card bg-light text-dark">
-                              <img src="announcement2.jpg" class="card-img-top" alt="Анонс 2">
+                              <img src="776.jpg" class="card-img-top" alt="Анонс 2">
                               <div class="card-body">
-                                  <h5 class="card-title">Военно-патриотические сборы</h5>
-                                  <p class="card-text">Запись открыта! Подготовка к сборам ВДВ пройдёт в июне.</p>
+                                  <h5 class="card-title">Вечная память героям..</h5>
+                                  <p class="card-text"></p>
                                   <a href="#" class="btn btn-primary">Подробнее</a>
                               </div>
                           </div>
                       </div>
                       <div class="swiper-slide">
                           <div class="card bg-light text-dark">
-                              <img src="announcement3.jpg" class="card-img-top" alt="Анонс 3">
+                              <img src="announcement2.2.jpg" class="card-img-top" alt="Анонс 3">
                               <div class="card-body">
-                                  <h5 class="card-title">Новые секции</h5>
-                                  <p class="card-text">В нашем клубе открыты новые направления: тактические игры и самооборона.</p>
+                                  <h5 class="card-title">Открытый ринг</h5>
+                                  <p class="card-text">Спарринги в «Олимпии» прошли на ура! 🥊🤼
+                                    Наши ребята вышли на ринг и продемонстрировали настоящий бойцовский характер</p>
                                   <a href="#" class="btn btn-primary">Подробнее</a>
                               </div>
                           </div>
                       </div>
                       <div class="swiper-slide">
                         <div class="card bg-light text-dark">
-                            <img src="announcement4.jpg" class="card-img-top" alt="Анонс 3">
+                            <img src="announcement4.2jpg" class="card-img-top" alt="Анонс 3">
                             <div class="card-body">
-                                <h5 class="card-title">Новые секции</h5>
-                                <p class="card-text">В нашем клубе открыты старые направления: практические игры и Гражданская оборона.</p>
+                                <h5 class="card-title">Открытый ринг</h5>
+                                <p class="card-text">🥊 Спаринги в Балабаново🔥
+                                  Сила, выносливость и настоящий боевой дух! 💪 Наши спортсмены показывают, на что способны в честных поединках.</p>
                                 <a href="#" class="btn btn-primary">Подробнее</a>
                             </div>
                         </div>
