--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   <div class="swiper-wrapper">
                       <div class="swiper-slide">
                           <div class="card bg-light text-dark">
-                              <img src="announcement4.2jpg" class="card-img-top" alt="Анонс 1">
+                              <img src="announcement4.2.jpg" class="card-img-top" alt="Анонс 1">
                               <div class="card-body">
                                   <h5 class="card-title">Открытый ринг</h5>
                                   <p class="card-text">Спарринги среди юных спортсменов пройдут 8 марта. Место проведение уточняется.</p>
@@ -195,7 +195,7 @@
                       </div>
                       <div class="swiper-slide">
                         <div class="card bg-light text-dark">
-                            <img src="announcement4.2jpg" class="card-img-top" alt="Анонс 3">
+                            <img src="announcement1.2.jpg" class="card-img-top" alt="Анонс 3">
                             <div class="card-body">
                                 <h5 class="card-title">Открытый ринг</h5>
                                 <p class="card-text">🥊 Спаринги в Балабаново🔥
