--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                               <div class="card-body">
                                   <h5 class="card-title">Открытый ринг</h5>
                                   <p class="card-text">Спарринги среди юных спортсменов пройдут 8 марта. Место проведение уточняется.</p>
-                                  <a href="#" class="btn btn-primary">Подробнее</a>
+                                  <a href="gallery.html" class="btn btn-primary">Подробнее</a>
                               </div>
                           </div>
                       </div>
@@ -177,8 +177,9 @@
                               <img src="776.jpg" class="card-img-top" alt="Анонс 2">
                               <div class="card-body">
                                   <h5 class="card-title">Вечная память героям..</h5>
-                                  <p class="card-text"></p>
-                                  <a href="#" class="btn btn-primary">Подробнее</a>
+                                  <p class="card-text">Четверть века подвигу 6-й роты. 
+                                    29 февраля 2000-го, шестая рота 104-го полка 76-й гвардейской Псковской дивизии ВДВ вступила в неравный бой с крупной группировкой чеченских боевиков. </p>
+                                  
                               </div>
                           </div>
                       </div>
@@ -189,7 +190,7 @@
                                   <h5 class="card-title">Открытый ринг</h5>
                                   <p class="card-text">Спарринги в «Олимпии» прошли на ура! 🥊🤼
                                     Наши ребята вышли на ринг и продемонстрировали настоящий бойцовский характер</p>
-                                  <a href="#" class="btn btn-primary">Подробнее</a>
+                                  <a href="gallery.html" class="btn btn-primary">Подробнее</a>
                               </div>
                           </div>
                       </div>
@@ -200,7 +201,7 @@
                                 <h5 class="card-title">Открытый ринг</h5>
                                 <p class="card-text">🥊 Спаринги в Балабаново🔥
                                   Сила, выносливость и настоящий боевой дух! 💪 Наши спортсмены показывают, на что способны в честных поединках.</p>
-                                <a href="#" class="btn btn-primary">Подробнее</a>
+                                <a href="gallery.html" class="btn btn-primary">Подробнее</a>
                             </div>
                         </div>
                     </div>
